changed naming and other minor changes in user,ko schema
