# server/api/controllers/stories/router.js
@@ -1,9 +1,0 @@
-import * as express from 'express';
-import controller from './controller';
-
-export default express
-  .Router()
-  .post('/', controller.createStory)
-  .get('/', controller.getStory)
-  .delete('/', controller.deleteStory)
-  .patch('/', controller.updateStory)
